# triangle_counting

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  competition.cpp  config.h  counting.cpp  counting.h  explore.py  graph_generator.py  io.cpp  io.h  prepare_bin_test.py  test.cpp  test_tools.h
cpu_forward/: CMakeLists.txt  cpu.cpp  cpu.h  graph.cpp  graph.h  timer.cpp  timer.h
doc/: Doxyfile
docs/: Doxyfile  license.dox  mainpage.dox
docs/source/: conf.py
lemontc/: CMakeLists.txt  config.h  counting.cpp  counting.h  io.cpp  io.h  lemon-tc.cpp  lemontc.cpp
